fixing the overlapping of text

--- a/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
+++ b/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
@@ -588,8 +588,8 @@ a {
 .dataset-map-expanded #dataset-map {
     position: absolute;
     width: 968px;
-    height: 384px;
-    top: -384px;
+    height: 383px;
+    top: -385px;
     left: -1px;
     background-color: white;
     border: 1px solid #CCC;
@@ -1500,6 +1500,7 @@ aside.secondary{margin-left:15px !important;border:1px solid #ccc;border-right:0
     font-size: 35px;
     font-weight: lighter;
     margin-left: 26px;
+    margin-top:5px;
 }
 .toolbar .pill{border-radius:0px;background-color:#a2a2a2;}
 .btn-primary.question {
